--- a/style.css
+++ b/style.css
@@ -1,194 +1,240 @@
-*{
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.container{
-    width: 100vw;
-    height: 97vh;
-    overflow-x: hidden;
+/* Variables Declaration  */
+
+:root {
+    --font-1: 'Orbitron';
+    --font-2: 'Poppins';
 }
 
-/* -------------------Navigation Bar-------------- */
+/* Typography and custom css*/
 
-.navbar-container{
+h1 {
+    font-size: 2.5rem;
+    font-family: var(--font-1);
+    margin: 1em 0;
+}
+
+h4 {
+    font-size: 1.1rem;
+    font-family: var(--font-2);
+    color: grey;
+    font-weight: 600;
+    margin: 1em 0;
+}
+
+p {
+    font-family: var(--font-2);
+    font-size: 0.9rem;
+    margin: 0.7em 0;
+}
+
+img {
+    max-width: 100%;
+}
+
+
+/* Navigation section */
+
+.navbar-container {
     display: flex;
-    width: 95vw;
-    height: 18vh;
-    justify-content: space-around;
     align-items: center;
-    padding: 0px 10px;
+    justify-content: space-between;
+    padding: 1em 0.5em;
 }
 
-.navbar-container img{
-    width: 120px;
-    height: 40px;
-    cursor: pointer;
+nav>div>img {
+    width: 60%;
 }
 
-.list-box ul{
-    display: flex;
-}
-.list-box ul li{
-    text-decoration: none;
+.list {
+    display: none;
     list-style: none;
-    padding: 10px;
-    margin: 10px;
-    font-size: 20px;
-    font-family: 'Orbitron';
-    font-weight: bold;
-    cursor: pointer;
+    align-items: center;
+    gap: 1.5em;
 }
-.list-box ul li:hover{
-    font-size: 22px;
+
+.button-group {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+}
+
+.search-icon>svg {
+    max-width: 20px;
+    padding-top: 0.3em;
+}
+
+.nav-button {
+    padding: 0.1em 0.5em;
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    border-radius: 5px;
+    text-align: center;
+
+}
+
+.nav-button:hover,
+.nav-button:focus {
+    cursor: pointer;
     background-color: black;
     color: white;
-    border-radius: 20px;
-    transition: font-size 0.5s ease;
 }
-.button-group{
+
+
+/* Hero Section  */
+
+
+.hero-container {
     display: flex;
-}
-
-.button-group .search-icon{
-    padding: 3px 12px;
-    cursor: pointer;
-}
-
-.button-group .nav-button{
-    width: 111px;
-    height: 36px;
-    border-radius: 10px;
-    background: white;
-    font-size: 20px;
-    color: #9f9090;
-    border: 3px solid black;
-}
-
-/* -------------------Navigation Bar-------------- */
-
-.hero-container{
-    display: flex;
+    flex-direction: column;
     position: relative;
+    justify-content: center;
+    align-items:center ;
 }
 
-.banner-image{
-    position: absolute;
-    left: 131px;
-    top: 30px;
+.hero-container>div {
+    order: -1;
 }
 
-.banner-image img{
-    width: 377px;
-    height: 438px;
+.square {
+    display: none;
 }
 
-.square{
-    position: absolute;
-    left: 173px;
-    top: 115px;
+.hero-container-right {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 1.8em;
+    order: 5;
+    max-width: 550px;
+    margin: 0 auto;
 }
 
-.star1{
+.button-email,
+.button-join {
+    padding: 0.5em 1em;
+    margin-top: 1em;
+    font-family: var(--font-1);
+    letter-spacing: 1px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.button-email {
+    color: grey;
+    background-color: white;
+    border: 2px solid black;
+    margin-right: 1em;
+}
+
+.button-join {
+    background-color: black;
+    color: white;
+    border: none !important;
+    outline: none;
+
+}
+
+.contact-heading {
+    margin: 2em 0;
+    font-size: 1.5rem;
+}
+
+.icons {
+    display: flex;
+    gap: 1.5em;
+}
+
+.star{
     position: absolute;
-    left: 1328px;
-    top: 29px;
-   
-}
-.star1 img{
-    width: 50px;
-    height: 50px;
-}
-.star2{
-    position: absolute;
-    left: 660px;
-    top: 440px;
-   
-}
-.star2 img{
-    width: 50px;
-    height: 50px;
+    bottom:0;
+    width: 10%;
+    left: 0;
 }
 
 .globe{
     position: absolute;
-    left: 794px;
-    top: -4px;
-}
-.globe img{
-    width: 50px;
-    height: 50px;
+    bottom: 0;
+    width: 10%;
+    right: 0px;
 }
 
-.hero-container-right{
-    display: flex;
-    flex-direction: column;
-    width: 580px;
-    height: 500px;
-    position: relative;
-    left: 731px;
-    top: 130px;
-    text-align: center;
+.hero-container>span>img {
+    width: 70%;
 }
 
-.hero-heading{
-    font-size: 40px;
-    font-family: 'Orbitron';
-    margin: 7px;
+
+@media (min-width:700px){
+    .list{
+        display: flex;
+        font-family: var(--font-2);
+        margin-right: 4em;
+        font-size: 1.2rem;
+    }
+
+    .hero-container{
+        flex-direction: row;
+    }
+
+    .hero-container-right{
+        width: 80%;
+
+    }
+    .globe{
+        right: 35%;
+        top: 5%;
+        width: 5%;
+    }
+    
+    .star{
+        right: 5%;
+        top: 5%;
+        width: 5%;
+        left: unset;
+    }
 }
 
-.hero-description{
-    font-family: 'Poppins';
-    margin: 30px;
-    font-size: 12px;
-    color: grey;
+
+@media (min-width:1000px){
+
+    .container{
+        padding: 0 2em;
+        position: relative;
+    }
+
+    .hero-container{
+        padding-top: 4em;
+    }
+    
+    .hero-container-right{
+        max-width: 800px;
+    }
+
+    .hero-container>div>img{
+        max-width: 350px;
+    }
+
+    .square{
+        display: flex;
+        position: absolute;
+        top: 50%;
+        z-index: -1;
+        left: 10%;
+    }
 }
 
-.button-email{
-    width: 143px;
-    padding: 4px;
-    border-radius: 7px;
-    font-family: 'Orbitron';
-    font-size: 15px;
-    margin: 15px;
-    cursor: pointer;
-}
-.button-email:hover{
-    background: #000000;
-    color: #ffffff;
-}
-.button-join{
-    width: 123px;
-    padding: 4px;
-    border-radius: 7px;
-    font-family: 'Orbitron';
-    font-size: 15px;
-    background-color: black;
-    color: white;
-    cursor: pointer;
-}
-.button-join:hover{
-    background: #ffffff;
-    color: #000000;
-    font-weight: bold;
-}
-.contact-heading{
-    font-family: 'Poppins';
-    color: #9f9090;
-    margin-top: 40px;
-    margin-left: 26px;
-}
-.icons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
-    cursor: pointer;
-}
 
-.icons img{
-    margin: 7px;
-    width: 30px;
-    height: 30px;
-}
+
+ 
